Update GameService GameController