@@ -2,10 +2,8 @@ package com.eduardo.ds_list.services;
 
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
-
 import com.eduardo.ds_list.dto.GameDTO;
-
+import com.eduardo.ds_list.entities.Game;
 import com.eduardo.ds_list.repositories.GameRepository;
 
 @Service
@@ -18,6 +16,9 @@ public class GameService {
     }
 
     public List<GameDTO> findAll() {
-        return gameRepository.findAll().stream().map(GameDTO::new).collect(Collectors.toList());
+        List<Game> games = gameRepository.findAll();
+        List<GameDTO> gameDTOs = games.stream().map(x -> new GameDTO(x)).toList();
+        return gameDTOs;
+        // return gameRepository.findAll().stream().map(GameDTO::new).collect(Collectors.toList());
     }
 }
